--- a/templates/form.html
+++ b/templates/form.html
@@ -82,17 +82,17 @@
 
             <div class="mb-3">
                 <label class="form-label">First Name</label>
-                <input type="text" name="first_name" class="form-control" placeholder="John" required>
+                <input type="text" name="first_name" class="form-control" placeholder="John" pattern="[A-Za-z]+" title="Only alphabets allowed" required>
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Middle Name</label>
-                <input type="text" name="middle_name" class="form-control" placeholder="Marshel">
+                <input type="text" name="middle_name" class="form-control" placeholder="Marshel" pattern="[A-Za-z]+" title="Only alphabets allowed">
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Last Name</label>
-                <input type="text" name="last_name" class="form-control" placeholder="Doe" required>
+                <input type="text" name="last_name" class="form-control" placeholder="Doe" pattern="[A-Za-z]+" title="Only alphabets allowed" required>
             </div>
 
             <div class="mb-3">
