--- a/templates/form.html
+++ b/templates/form.html
@@ -128,7 +128,7 @@
 
             <div class="mb-3">
                 <label class="form-label">Start Date</label>
-                <input type="date" name="start_date" class="form-control" min="{{ today }} required>
+                <input type="date" name="start_date" class="form-control" required>
             </div>
 
             <div class="mb-3">
