--- a/templates/form.html
+++ b/templates/form.html
@@ -146,13 +146,13 @@
     </div>
 </div>
 
-<!-- <script>
+<<script>
     document.querySelector("form").addEventListener("submit", function () {
         const btn = document.querySelector("button[type='submit']");
         btn.innerHTML = "Generating...";
         btn.disabled = true;
     });
-</script> -->
+</script>
 
 <script>
     document.querySelector("form").addEventListener("submit", function () {
