--- a/templates/form.html
+++ b/templates/form.html
@@ -66,11 +66,14 @@
                     <option value="DataAnalyst.docx">Data Analyst</option>
                     <option value="DatabaseOffer.docx">Database Offer</option>
                     <option value="DigitalMarketing.docx">Digital Marketing</option>
-                    <option value="fullstack.docx">Fullstack</option>
+                    <option value="EngagementCreator.docx">Engagement Creater</option>
                     <option value="GraphicDesign.docx">Graphic Design</option>
                     <option value="HumanResource.docx">Human Resource</option>
+                    <option value="OperationsManager.docx">Operations Manager</option>
+                    <option value="PerformanceMarketer.docx">Performance Marketer</option>
                     <option value="QualityAnalyst.docx">Quality Analyst</option>
                     <option value="ScrumMaster.docx">Scrum Master</option>
+                    <option value="SoftwareDeveloper.docx">Software Developer</option>
                     <option value="TaxExecutive.docx">Tax Executive</option>
                     <option value="TaxManager.docx">Tax Manager</option>
                     <option value="TeamLead.docx">Team Lead</option>
@@ -99,25 +102,28 @@
                 <label class="form-label">Role</label>
                 <select name="role" class="form-select" required>
                     <option value="" disabled selected>Select a role</option>
-                    <option value="Academic Mentor">Academic Mentor</option>
-                    <option value="Academic Research">Academic Research</option>
-                    <option value="Accounts Assistant">Accounts Assistant</option>
-                    <option value="Cinematic Video Editing">Cinematic Video Editing</option>
-                    <option value="Content Writer">Content Writer</option>
-                    <option value="Data Analyst">Data Analyst</option>
-                    <option value="Database Offer">Database Offer</option>
-                    <option value="Digital Marketing">Digital Marketing</option>
-                    <option value="Fullstack">Fullstack</option>
-                    <option value="Graphic Design">Graphic Design</option>
-                    <option value="Human Resource">Human Resource</option>
-                    <option value="Quality Analyst">Quality Analyst</option>
-                    <option value="Scrum Master">Scrum Master</option>
-                    <option value="Tax Executive">Tax Executive</option>
-                    <option value="Tax Manager">Tax Manager</option>
-                    <option value="Team Lead">Team Lead</option>
-                    <option value="UI/UX">UI/UX</option>
-                    <option value="Video Editing">Video Editing</option>
-                    <option value="WordPress Developer">WordPress Developer</option>
+                    <option value="AcademicMentor.docx">Academic Mentor</option>
+                    <option value="AcademicResearch.docx">Academic Research</option>
+                    <option value="AccountsAssistant.docx">Accounts Assistant</option>
+                    <option value="CinematicVideoEditing.docx">Cinematic Video Editing</option>
+                    <option value="ContentWriter.docx">Content Writer</option>
+                    <option value="DataAnalyst.docx">Data Analyst</option>
+                    <option value="DatabaseOffer.docx">Database Offer</option>
+                    <option value="DigitalMarketing.docx">Digital Marketing</option>
+                    <option value="EngagementCreator.docx">Engagement Creater</option>
+                    <option value="GraphicDesign.docx">Graphic Design</option>
+                    <option value="HumanResource.docx">Human Resource</option>
+                    <option value="OperationsManager.docx">Operations Manager</option>
+                    <option value="PerformanceMarketer.docx">Performance Marketer</option>
+                    <option value="QualityAnalyst.docx">Quality Analyst</option>
+                    <option value="ScrumMaster.docx">Scrum Master</option>
+                    <option value="SoftwareDeveloper.docx">Software Developer</option>
+                    <option value="TaxExecutive.docx">Tax Executive</option>
+                    <option value="TaxManager.docx">Tax Manager</option>
+                    <option value="TeamLead.docx">Team Lead</option>
+                    <option value="UIUX.docx">UI/UX</option>
+                    <option value="VideoEditing.docx">Video Editing</option>
+                    <option value="WordPressDeveloper.docx">WordPress Developer</option>
                 </select>
             </div>
 
