--- a/templates/relieving_form.html
+++ b/templates/relieving_form.html
@@ -91,8 +91,8 @@
     <header>
         <h1>UD Letter Generator</h1>
         <nav>
-            <a href="form.html">Offer Letter</a>
-            <a href="relieving_form.html">Relieving Letter</a>
+            <a href="{{ url_for('form') }}">Offer Letter</a>
+            <a href="{{ url_for('relieving_form') }}">Relieving Letter</a>
         </nav>
     </header>
     <div class="container">
@@ -179,5 +179,6 @@
     </script>
 
 </body>
+
 
 </html>
