--- a/templates/relieving_form.html
+++ b/templates/relieving_form.html
@@ -134,11 +134,11 @@
                 </div>
 
                 <div class="mb-3">
-                    <label class="form-label">Gender</label>
-                    <select name="gender" class="form-control" required>
-                        <option disabled selected>Select a role</option>
-                        <option value="male.docx">Male</option>
-                        <option value="female.docx">Female</option>
+                    <label class="form-label">Template</label>
+                    <select name="template" class="form-control" required>
+                        <option disabled selected>Select a Template</option>
+                        <option value="male.docx">Male Template</option>
+                        <option value="female.docx">Female Template</option>
                     </select>
                 </div>
 
@@ -182,3 +182,4 @@
 
 
 </html>
+
